# nimble_raccoon

./: MANIFEST.in  README.md  pyproject.toml  rc_todo.txt
.github/workflows/: pytest.yml  release_package.yml
src/nimble_raccoon/: raccoon.py  rc_testing.py  trees.py  utils.py
src/nimbloon/: __init__.py  raccoon.py  utils.py
src/nimbloon/static/: header.txt
src/nraccoon/: __init__.py  raccoon.py
tests/: rc_testing.py  test_nrc.py
tests/ground_truth/: params_bBrRVKco-JyI7liYLyO-7Q==.csv  params_hotT1_bRbaJ798SyeJIsgQ==.csv  rc_results_9bij3HTG09qCZGdCJBU2FA==.pq  rc_results_bBrRVKco-JyI7liYLyO-7Q==.pq  rc_results_hotT1_bRbaJ798SyeJIsgQ==.pq  rc_tree_9bij3HTG09qCZGdCJBU2FA==.json  rc_tree_bBrRVKco-JyI7liYLyO-7Q==.json  rc_tree_hotT1_bRbaJ798SyeJIsgQ==.json
