[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimble-raccoon"
authors = [
    {name = "Federico Comitani", email = "federico.comitani@gmail.com"},
]
version = "0.1.0"
description = "A slim and fast implementation of the RACCOON clustering library."
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords=["efaar_benchmarking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3"
]

dependencies = [
    ]
dynamic = ["version", "README.md"]

[project.urls]
repository = "https://github.com/fcomitani/nimble-raccoon""

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "build*"]

[tool.setuptools.package-data]
nimble-raccoon = ["static*"]

