[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimble-raccoon"
authors = [
    {name = "Federico Comitani", email = "federico.comitani@gmail.com"},
]
description = "A slim and fast implementation of the RACCOON clustering library."
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
keywords=["efaar_benchmarking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3"
]
dependencies = [
  'pyarrow',
  'numpy',
  'pandas',
  'scikit-learn',
  'scikit-network',
  'umap-learn',
  'anytree',
  'tqdm',
  'pynndescent',
  'matplotlib',
  'loguru',
  'faiss-cpu'
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file=["README.md"]}

[project.optional-dependencies]
gpu = ['faiss-gpu']

[project.urls]
repository = "https://github.com/fcomitani/nimble-raccoon"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "build*"]

[tool.setuptools.package-data]
nimbloon = ["static*"]
